DOCS changelog template typo

--- a/.changelog.md.twig
+++ b/.changelog.md.twig
@@ -2,7 +2,7 @@
 
 ## Overview
 
-This release includes [Silverstripe CMS version X.X.X](#).
+This release includes [Silverstripe CMS Recipe version X.X.X](#).
 
 {% if version.stability == 'rc' %}
 
