--- a/.changelog.md.twig
+++ b/.changelog.md.twig
@@ -18,11 +18,12 @@ Upgrading to Recipe {{ version }} is recommended for all CWP sites. This upgrade
 
 This release includes security fixes. Please see the release announcements for more detailed
 descriptions of each but note that the following issues may have modified CVSS Environmental
-scores which take built-in protections from the CWP platform into account.
-We highly encourage upgrading CWP projects to include latest security patches nonetheless.
+scores which take built-in protections from the CWP platform into account. We highly encourage upgrading CWP projects to include latest security patches nonetheless.
 
- * [CVE-0000-0000 The Issue Title](https://www.silverstripe.org/download/security-releases/CVE-0000-0000)
- * [CVE-0000-0001 The Issue Title](https://www.silverstripe.org/download/security-releases/CVE-0000-0001)
+We have provided a high-level severity rating of the vulnerabilities below based on the CVSS score, however please note this could vary based on the specifics of each project. You can [read the severity rating definitions in the Silverstripe CMS release process](https://docs.silverstripe.org/en/4/contributing/release_process/#severity-rating). 
+
+ * [CVE-0000-0000 The Issue Title](https://www.silverstripe.org/download/security-releases/CVE-0000-0000) Severity: {# Critical/ High/ Medium/ Low #}
+ * [CVE-0000-0001 The Issue Title](https://www.silverstripe.org/download/security-releases/CVE-0000-0001) Severity: {# Critical/ High/ Medium/ Low #}
 
 ## New features
 
